# $Id$

2006-01-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/: removed unneeded wrapper in DAO-workers.

	* core/Cache/PeclMemcached.class.php: connector for PECL's memcache
	extension.

	* core/, main/: removed sizeof() abusing in for() loops.

	* core/DB/Dialect.class.php, core/OSQL/FromTable.class.php: table's
	schema "support" moved away from Dialect to reduce the number of
	strpos() calls at least by a factor; spotted by Antony.

2006-01-16	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* doc/www/: DAO example updated, added Meta example.

2006-01-10	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/: implemented {Abstract,Dictionary}Class and StraightMapping
	patterns.

2006-01-07	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/: root for metaconfiguration' stuff.

2005-12-31	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.7 released.

2005-12-05	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/: SQLite support implemented.

2005-11-30	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/: all DAOs moved to workers-based single hierarchy.

2005-11-28	Igor V. Gulyaev		<igor_vg@mail.ru>

	* core/DB/: single-check added for single row queries.

2005-11-26	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/: Interbase connector implemented.

2005-11-24	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.6 released.

2005-11-23	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/SmartDAO.class.php: yet another race prevention.

2005-11-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/: wrongly defined worker's interface fixed.

2005-11-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/ImaginaryDialect.class.php: query's self-identification helper.

	* core/Cache/RubberFileSystem.class.php: ported to SemaphorePool.

2005-11-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/: proof-of-concept global SemaphorePool implemented.
