@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2005 by Sveta Smirnova                             *
+ *   Copyright (C) 2004-2006 by Sveta Smirnova                             *
  *   sveta@microbecal.com                                                  *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
@@ -15,65 +15,51 @@
 	 * Inheritable Singletone's pattern implementation.
 	 * 
 	 * @ingroup Base
+	 * 
+	 * @example singletone.php
 	**/
 	abstract class Singletone
 	{
-		protected function __construct($class = null)
-		{
-			static $instances = array();
-			static $container = null;
-			
-			if (null === $container)
-				$container = new SingletoneException();
-			
-			if (isset($instances[$class]))
-				throw $container->setInstance($instances[$class]);
-			else
-				$instances[$class] = $this;
-		}
+		final protected function __construct() {/* you can't create me */}
 		
 		final public static function getInstance(
-			$class = 'SingletoneInstance', $args = null /* , ... */
+			$class = null, $args = null /* , ... */
 		)
 		{
+			static $instances = array();
+			
+			if (null == $class) {
+				static $wrapper = null;
+				
+				if (null == $wrapper)
+					$wrapper = new SingletoneInstance();
+				
+				return $wrapper;
+			}
+			
 			// for Singletone::getInstance('class_name', $arg1, ...) calling
 			if (2 < func_num_args()) {
 				$args = func_get_args();
 				array_shift($args);
 			}
 
-			try {
-				return new $class($class, $args);
-			} catch (SingletoneException $e) {
-				return $e->getInstance();
-			}
+			if (!isset($instances[$class]))
+				return $instances[$class] = new $class($class, $args);
+			else
+				return $instances[$class];
 		}
 		
 		final private function __clone() {/* do not clone me */}
 	}
 	
+	/**
+	 * @ingroup Base
+	**/
 	final class SingletoneInstance extends Singletone
 	{
 		public function __call($class, $args = null)
 		{
 			return Singletone::getInstance($class, $args);
-		}
-	}
-	
-	final class SingletoneException extends Exception
-	{
-		private $instance = null;
-		
-		public function getInstance()
-		{
-			return $this->instance;
-		}
-		
-		public function setInstance(Singletone $instance)
-		{
-			$this->instance = $instance;
-			
-			return $this;
 		}
 	}
 ?>
